--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
 
             <a class="navbar-brand" href="index.html">
-              <img src="/Assets/logo.png" width="30" height="30" alt="" loading="lazy">
+              <img src="/Assets/logo.png" width="30" height="30" alt="Logo picture" loading="lazy">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
