--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <div class="bioContainer">
       <div class="profileImage">
-        <img src="/Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
+        <img src="Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
         <div class="overlay">
         </div>
       </div>
