--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="index.html">
-          <img src="/Assets/logo.png" width="30" height="30" alt="logo picture" loading="lazy">
+          <img src="Assets/logo.png" width="30" height="30" alt="logo picture" loading="lazy">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
