correct some errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
 
             <a class="navbar-brand" href="index.html">
-              <img src="/Assets/logo.png" width="30" height="30" alt="Logo picture" loading="lazy">
+              <img src="./Assets/logo.png" width="30" height="30" alt="Logo picture" loading="lazy">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
     <main>
       <div class="bioContainer">
       <div class="profileImage">
-        <img src="/Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
+        <img src="./Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
         <div class="overlay">
         </div>
       </div>
