Created JSON and injected paragraphs with JSON

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!--
       Author: Heesoo Lim
-      Date: July 02, 2020
+      Date: July 21, 2020
       Website Name: Bio page
       File Name: index.html
       File Description: This is the home page of assignment 2 (Bio page)
@@ -56,12 +56,18 @@
       <div class="profileImage">
         <img src="./Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
         <div class="overlay">
+          <h2></h2>
+          <h2></h2>
         </div>
       </div>
       
       <hr style="margin-top: 50px; margin-bottom: 50px;">
 
-      <div class="missionStatement"></div>
+      <div class="missionStatement">
+        <p></p>
+        <p></p>
+        <p></p>
+      </div>
       
       <hr>
     </div>
