--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
   <!--
       Author: Heesoo Lim
-      Date: July 21, 2020
+      Date: July 28, 2020
       Website Name: Contact page
       File Name: contact.html
-      File Description: This is the contact page of assignment 2
+      File Description: This is the contact page of assignment 3
    -->
   
     <meta charset="UTF-8">
@@ -22,35 +22,7 @@
   <div id="contactBackground">
 
   <!-- Main navigation bar -->
-  <header>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="index.html">
-          <img src="./Assets/logo.png" width="30" height="30" alt="logo picture" loading="lazy">
-        </a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"><i class="fas fa-house-user fa-lg"></i> Bio</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="project.html"><i class="fas fa-briefcase fa-lg"></i> Project</a>
-            </li>
-
-            <li class="nav-item">
-            <a class="nav-link" href="contact.html"><i class="fas fa-phone-square fa-lg"></i> Contact</a>
-            </li>
-          </ul>
-
-        </div>
-      </nav>
-</header>
+  <header></header>
 
     <!-- main contents -->
     <main id="formWrapper">
@@ -112,9 +84,7 @@
     </main>
 
     <!-- Footer navigation bar -->
-    <footer>
-      <nav class="navbar bottom navbar-light"></nav>
-    </footer>
+    <footer></footer>
 
   </div>
 
