changed json file structure and html files

--- a/index.html
+++ b/index.html
@@ -28,18 +28,15 @@
       <div class="profileImage">
         <img src="./Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
         <div class="overlay">
-          <h2 id="overlay1"></h2>
-          <h2 id="overlay2"></h2>
+          <!-- <h2 id="overlay1"></h2>
+          <h2 id="overlay2"></h2> -->
+          <div class="hoverTexts"></div>
         </div>
       </div>
       
       <hr style="margin-top: 50px; margin-bottom: 50px;">
 
-      <div class="missionStatement">
-        <p></p>
-        <p></p>
-        <p></p>
-      </div>
+      <div class="missionStatement"></div>
       
       <hr>
     </div>
