changed structure of app.js and edited comments

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <!--
       Author: Heesoo Lim
-      Date: July 28, 2020
-      Website Name: Contact page
+      Date: August 03, 2020
+      Website Name: Contact
       File Name: contact.html
       File Description: This is the contact page of assignment 3
    -->
