--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <!--
       Author: Heesoo Lim
-      Date: July 28, 2020
-      Website Name: Bio page
+      Date: August 03, 2020
+      Website Name: Bio
       File Name: index.html
       File Description: This is the home page of assignment 3 (Bio page)
    -->
@@ -28,8 +28,6 @@
       <div class="profileImage">
         <img src="./Assets/Heesoo1.jpg" alt="Heesoo Lim's profile picture" class="image">
         <div class="overlay">
-          <!-- <h2 id="overlay1"></h2>
-          <h2 id="overlay2"></h2> -->
           <div class="hoverTexts"></div>
         </div>
       </div>
