--- a/project.html
+++ b/project.html
@@ -3,8 +3,8 @@
 <head>
   <!--
       Author: Heesoo Lim
-      Date: July 28, 2020
-      Website Name: Project page
+      Date: August 03, 2020
+      Website Name: Project
       File Name: project.html
       File Description: This is the project page of assignment 3
    -->
